Fix line-numbers gap in /docs code sample.
Fix:
        templates/docs.html
                -Remove gap between the line-number column and code-viewport
                boundary in the API usage sample.

--- a/static/sass/docs.sass
+++ b/static/sass/docs.sass
@@ -47,11 +47,13 @@ span
         font-weight: bold
 
 table.code-example
+    border-collapse: collapse
     width: 100% !important
 
     td.linenos
-        width: 20px
+        border: 1px solid $baseColor2
         padding-left: 10px
+        width: 20px
 
     td.code
         padding-left: 10px
